infra/terraform/gateway.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: GatewayClass
metadata:
  name: eg
spec:
  controllerName: gateway.envoyproxy.io/gatewayclass-controller
---
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  name: eg
  annotations:
    # Esta anotação, embora tecnicamente opcional,
    # pode ser usada para garantir que o serviço de exposição
    # do Envoy Gateway utilize um Application Load Balancer (ALB) da AWS
    # em vez do Network Load Balancer (NLB) padrão (dependendo da sua instalação).
    # Se você preferir um NLB, pode remover esta anotação.
    service.beta.kubernetes.io/aws-load-balancer-type: external
spec:
  gatewayClassName: eg
  listeners:
    - name: http
      protocol: HTTP
      port: 80
